fix: 支持上传界面

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <input class="file-input" type="file" />
 
     <img class="file-img" src="" alt="" />
+
+    <div class="file-progress-wrap">
+      <!-- <div class="file-progress-wrap_cell cell">
+        <div class="file-progress-wrap_cell_bar bar">
+          <div class="file-progress-wrap_cell_bar_inner inner-bar"></div>
+        </div>
+        <span class="file-progress-wrap_cell_name name">YUMNHGG</span>
+        <span class="file-progress-wrap_cell_percent percent">0%</span>
+      </div> -->
+    </div>
   </div>
 
   <script type="module" src="./src/index.ts"></script>
