fix: 支持暂停/续传

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
 <body>
 
   <div class="app">
-    <input class="file-input" type="file" />
+    <input class="file-input" type="file" multiple />
 
     <img class="file-img" src="" alt="" />
 
     <div class="file-progress-wrap">
-      <!-- <div class="file-progress-wrap_cell cell">
-        <div class="file-progress-wrap_cell_bar bar">
-          <div class="file-progress-wrap_cell_bar_inner inner-bar"></div>
+      <!-- <div class="file-progress-wrap_cell">
+        <div class="file-progress-wrap_cell_name">YUMNHGG</div>
+        <span class="file-progress-wrap_cell_percent_text">上传中</span>
+        <div class="file-progress-wrap_cell_bar">
+          <div class="file-progress-wrap_cell_bar_inner"></div>
         </div>
-        <span class="file-progress-wrap_cell_name name">YUMNHGG</span>
-        <span class="file-progress-wrap_cell_percent percent">0%</span>
+        <span class="file-progress-wrap_cell_percent">0%</span>
+
+        <div class="file-progress-wrap_cell_btn-wrap">
+          <button>暂 停</button>
+          <button>继 续</button>
+          <button>取 消</button>
+        </div>
       </div> -->
     </div>
   </div>
