fix: fix-bar-process

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div class="app">
     <input class="file-input" type="file" multiple />
 
+    <button class="btn btn-reset">RESET</button>
+
     <img class="file-img" src="" alt="" />
 
     <div class="file-progress-wrap">
