feat: 支持切片视频

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
       </div> -->
     </div>
+
+    <div id="video"></div>
   </div>
 
   <script type="module" src="./src/index.ts"></script>
